nodejs/versioned_docs/version-1.9.0/assertions.mdx
---
id: assertions
title: "Assertions"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

Playwright provides convenience APIs for common tasks, like reading the text content of an element. These APIs can be used in your test assertions.

- [Text content](#text-content)
- [Inner text](#inner-text)
- [Attribute value](#attribute-value)
- [Checkbox state](#checkbox-state)
- [JS expression](#js-expression)
- [Inner HTML](#inner-html)
- [Visibility](#visibility)
- [Enabled state](#enabled-state)
- [Custom assertions](#custom-assertions)

## Text content

```js
const content = await page.textContent('nav:first-child');
expect(content).toBe('home');
```

### API reference
- [page.textContent(selector[, options])](./api/class-page.mdx#pagetextcontentselector-options)
- [elementHandle.textContent()](./api/class-elementhandle.mdx#elementhandletextcontent)

## Inner text

```js
const text = await page.innerText('.selected');
expect(text).toBe('value');
```

### API reference
- [page.innerText(selector[, options])](./api/class-page.mdx#pageinnertextselector-options)
- [elementHandle.innerText()](./api/class-elementhandle.mdx#elementhandleinnertext)

## Attribute value

```js
const alt = await page.getAttribute('input', 'alt');
expect(alt).toBe('Text');
```

## Checkbox state

```js
const checked = await page.isChecked('input');
expect(checked).toBeTruthy();
```

### API reference
- [page.isChecked(selector[, options])](./api/class-page.mdx#pageischeckedselector-options)
- [elementHandle.isChecked()](./api/class-elementhandle.mdx#elementhandleischecked)

## JS expression

```js
const content = await page.$eval('nav:first-child', e => e.textContent);
expect(content).toBe('home');
```

### API reference
- [page.$eval(selector, pageFunction[, arg])](./api/class-page.mdx#pageevalselector-pagefunction-arg)
- [jsHandle.evaluate(pageFunction[, arg])](./api/class-jshandle.mdx#jshandleevaluatepagefunction-arg)

## Inner HTML

```js
const html = await page.innerHTML('div.result');
expect(html).toBe('<p>Result</p>');
```

### API reference
- [page.innerHTML(selector[, options])](./api/class-page.mdx#pageinnerhtmlselector-options)
- [elementHandle.innerHTML()](./api/class-elementhandle.mdx#elementhandleinnerhtml)

## Visibility

```js
const visible = await page.isVisible('input');
expect(visible).toBeTruthy();
```

### API reference
- [page.isVisible(selector[, options])](./api/class-page.mdx#pageisvisibleselector-options)
- [elementHandle.isVisible()](./api/class-elementhandle.mdx#elementhandleisvisible)

## Enabled state

```js
const enabled = await page.isEnabled('input');
expect(enabled).toBeTruthy();
```

### API reference
- [page.isEnabled(selector[, options])](./api/class-page.mdx#pageisenabledselector-options)
- [elementHandle.isEnabled()](./api/class-elementhandle.mdx#elementhandleisenabled)

## Custom assertions

With Playwright, you can also write custom JavaScript to run in the context of the browser. This is useful in situations where you want to assert for values that are not covered by the convenience APIs above.

```js
// Assert local storage value
const userId = page.evaluate(() => window.localStorage.getItem('userId'));
expect(userId).toBeTruthy();

// Assert value for input element
await page.waitForSelector('#search');
const value = await page.$eval('#search', el => el.value);
expect(value === 'query').toBeTruthy();

// Assert computed style
const fontSize = await page.$eval('div', el => window.getComputedStyle(el).fontSize);
expect(fontSize === '16px').toBeTruthy();

// Assert list length
const length = await page.$$eval('li.selected', (items) => items.length);
expect(length === 3).toBeTruthy();
```

### API reference
- [page.evaluate(pageFunction[, arg])](./api/class-page.mdx#pageevaluatepagefunction-arg)
- [page.$eval(selector, pageFunction[, arg])](./api/class-page.mdx#pageevalselector-pagefunction-arg)
- [page.$$eval(selector, pageFunction[, arg])](./api/class-page.mdx#pageevalselector-pagefunction-arg-1)
- [frame.evaluate(pageFunction[, arg])](./api/class-frame.mdx#frameevaluatepagefunction-arg)
- [frame.$eval(selector, pageFunction[, arg])](./api/class-frame.mdx#frameevalselector-pagefunction-arg)
- [frame.$$eval(selector, pageFunction[, arg])](./api/class-frame.mdx#frameevalselector-pagefunction-arg-1)
- [elementHandle.$eval(selector, pageFunction[, arg])](./api/class-elementhandle.mdx#elementhandleevalselector-pagefunction-arg)
- [elementHandle.$$eval(selector, pageFunction[, arg])](./api/class-elementhandle.mdx#elementhandleevalselector-pagefunction-arg-1)
- [EvaluationArgument]

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Android]: ./api/class-android.mdx "Android"
[AndroidDevice]: ./api/class-androiddevice.mdx "AndroidDevice"
[AndroidInput]: ./api/class-androidinput.mdx "AndroidInput"
[AndroidSocket]: ./api/class-androidsocket.mdx "AndroidSocket"
[AndroidWebView]: ./api/class-androidwebview.mdx "AndroidWebView"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserServer]: ./api/class-browserserver.mdx "BrowserServer"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[CDPSession]: ./api/class-cdpsession.mdx "CDPSession"
[ChromiumBrowser]: ./api/class-chromiumbrowser.mdx "ChromiumBrowser"
[ChromiumBrowserContext]: ./api/class-chromiumbrowsercontext.mdx "ChromiumBrowserContext"
[ChromiumCoverage]: ./api/class-chromiumcoverage.mdx "ChromiumCoverage"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[Electron]: ./api/class-electron.mdx "Electron"
[ElectronApplication]: ./api/class-electronapplication.mdx "ElectronApplication"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[FirefoxBrowser]: ./api/class-firefoxbrowser.mdx "FirefoxBrowser"
[Frame]: ./api/class-frame.mdx "Frame"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Logger]: ./api/class-logger.mdx "Logger"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Video]: ./api/class-video.mdx "Video"
[WebKitBrowser]: ./api/class-webkitbrowser.mdx "WebKitBrowser"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[Evaluation Argument]: ./core-concepts.mdx#evaluationargument "Evaluation Argument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Array]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array "Array"
[boolean]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Boolean_type "Boolean"
[Buffer]: https://nodejs.org/api/buffer.html#buffer_class_buffer "Buffer"
[ChildProcess]: https://nodejs.org/api/child_process.html "ChildProcess"
[Error]: https://nodejs.org/api/errors.html#errors_class_error "Error"
[EventEmitter]: https://nodejs.org/api/events.html#events_class_eventemitter "EventEmitter"
[function]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Function "Function"
[Map]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map "Map"
[null]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/null "null"
[number]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Number_type "Number"
[Object]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object "Object"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[Readable]: https://nodejs.org/api/stream.html#stream_class_stream_readable "Readable"
[RegExp]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/RegExp "RegExp"
[string]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#String_type "string"
[URL]: https://nodejs.org/api/url.html "URL"